--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -6,5 +6,22 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-navigation": "^2.7.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "flow-bin": "^0.76.0",
+    "flow-result-checker": "^1.0.0",
+    "jest-expo": "^28.0.0",
+    "jest-junit-reporter": "^1.1.0",
+    "react-test-renderer": "^16.4.1",
+    "redux-devtools": "^3.4.1",
+    "redux-logger": "^3.0.6"
   }
 }
