--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -5,6 +5,7 @@
     "expo": "^28.0.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-deck-swiper": "^1.5.17",
     "react-navigation": "^2.7.0"
   },
   "devDependencies": {
