--- a/inat-identify/app.json
+++ b/inat-identify/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "inat-identify",
+    "name": "inat-toolkit",
     "description": "This project is really great.",
-    "slug": "inat-identify",
+    "slug": "inat-toolkit",
     "privacy": "public",
     "sdkVersion": "28.0.0",
     "platforms": ["ios", "android"],
