--- a/inat-identify/.babelrc
+++ b/inat-identify/.babelrc
@@ -3,6 +3,11 @@
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source"]
+    },
+    "production": {
+      "plugins": [
+        "react-native-paper/babel"
+      ]
     }
   }
 }
