--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -9,7 +9,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-deck-swiper": "^1.5.22",
     "react-native-paper": "^2.1.2",
-    "react-navigation": "^2.17.0"
+    "react-navigation": "^2.17.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.1",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -24,6 +28,8 @@
     "flow-result-checker": "^1.1.0",
     "jest-expo": "^30.0.0",
     "jest-junit-reporter": "^1.1.0",
-    "react-test-renderer": "^16.5.2"
+    "react-test-renderer": "^16.5.2",
+    "redux-devtools": "^3.4.1",
+    "redux-logger": "^3.0.6"
   }
 }
