--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -1,6 +1,6 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "private": true,
+  "main": "main.js",
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^30.0.0",
