--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "main": "main.js",
   "scripts": {
+    "checks": "node ./scripts/CheckSecretsExist.js",
     "solidarity": "yarn solidarity"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "chalk": "^2.4.1",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-rallycoding": "^3.2.0",
