--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.5.0",
     "flow-bin": "^0.82.0",
     "flow-result-checker": "^1.1.0",
     "jest-expo": "^30.0.0",
