Change splash resize mode

--- a/inat-identify/app.json
+++ b/inat-identify/app.json
@@ -17,7 +17,7 @@
     "scheme": "inat-toolkit",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
