--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "expo": "^30.0.0",
+    "babel-preset-expo": "^5.0.0",
+    "expo": "^31.0.4",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
-    "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
     "react-native-deck-swiper": "^1.5.22",
     "react-native-paper": "^2.1.2",
     "react-navigation": "^2.17.0",
@@ -34,7 +35,7 @@
     "eslint-plugin-react-native": "^3.5.0",
     "flow-bin": "^0.82.0",
     "flow-result-checker": "^1.1.0",
-    "jest-expo": "^30.0.0",
+    "jest-expo": "^31.0.0",
     "jest-junit-reporter": "^1.1.0",
     "react-test-renderer": "^16.5.2",
     "redux-devtools": "^3.4.1",
