--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -15,7 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
     "react-native-deck-swiper": "^1.5.22",
     "react-native-paper": "^2.1.2",
-    "react-navigation": "^2.17.0",
+    "react-navigation": "^3.0.0-rc.0",
     "react-navigation-header-buttons": "^2.1.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
