--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -9,15 +9,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-expo": "^5.0.0",
-    "expo": "^31.0.4",
+    "expo": "^31.0.5",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
-    "react-native-deck-swiper": "^1.5.22",
-    "react-native-paper": "^2.1.2",
-    "react-navigation": "^3.0.0-rc.0",
-    "react-navigation-header-buttons": "^2.1.0",
-    "react-redux": "^5.0.7",
+    "react-native-deck-swiper": "^1.5.25",
+    "react-native-paper": "^2.2.8",
+    "react-navigation": "^3.0.0",
+    "react-navigation-header-buttons": "^2.1.1",
+    "react-redux": "^5.1.1",
     "redux": "^4.0.1",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0"
@@ -25,20 +25,19 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "chalk": "^2.4.1",
-    "eslint": "^5.6.1",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-rallycoding": "^3.2.0",
-    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
-    "flow-bin": "^0.82.0",
+    "flow-bin": "^0.86.0",
     "flow-result-checker": "^1.1.0",
     "jest-expo": "^31.0.0",
     "jest-junit-reporter": "^1.1.0",
-    "react-test-renderer": "^16.5.2",
-    "redux-devtools": "^3.4.1",
+    "react-test-renderer": "^16.6.3",
+    "redux-devtools": "^3.4.2",
     "redux-logger": "^3.0.6",
     "solidarity": "^2.1.0",
     "solidarity-react-native": "^2.0.2"
