--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -3,19 +3,18 @@
   "main": "main.js",
   "scripts": {
     "checks": "node ./scripts/CheckSecretsExist.js",
-    "start": "yarn checks && expo start -c",
-    "solidarity": "yarn solidarity"
+    "start": "yarn checks && expo start -c"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-expo": "^5.0.0",
-    "expo": "^31.0.5",
+    "expo": "^31.0.6",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
     "react-native-deck-swiper": "^1.5.25",
-    "react-native-paper": "^2.2.8",
-    "react-navigation": "^3.0.0",
+    "react-native-paper": "^2.4.0",
+    "react-navigation": "^3.0.9",
     "react-navigation-header-buttons": "^2.1.1",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
@@ -32,14 +31,14 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
-    "flow-bin": "^0.86.0",
+    "flow-bin": "^0.89.0",
     "flow-result-checker": "^1.1.0",
     "jest-expo": "^31.0.0",
     "jest-junit-reporter": "^1.1.0",
-    "react-test-renderer": "^16.6.3",
-    "redux-devtools": "^3.4.2",
+    "react-test-renderer": "^16.7.0",
+    "redux-devtools": "^3.5.0",
     "redux-logger": "^3.0.6",
-    "solidarity": "^2.1.0",
-    "solidarity-react-native": "^2.0.2"
+    "solidarity": "^2.3.1",
+    "solidarity-react-native": "^2.1.2"
   }
 }
