--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -35,6 +35,7 @@
     "flow-result-checker": "^1.1.0",
     "jest-expo": "^32.0.0",
     "jest-junit-reporter": "^1.1.0",
+    "react-native-testing-library": "^1.5.0",
     "react-test-renderer": "^16.7.0",
     "redux-devtools": "^3.5.0",
     "redux-logger": "^3.0.6",
