--- a/inat-identify/package.json
+++ b/inat-identify/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "chalk": "^2.4.1",
+    "detox": "^9.1.2",
+    "detox-expo-helpers": "^0.6.0",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-flowtype": "^3.2.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
+    "expo-detox-hook": "^1.0.10",
     "flow-bin": "^0.89.0",
     "flow-result-checker": "^1.1.0",
     "jest-expo": "^32.0.0",
@@ -41,5 +44,15 @@
     "redux-logger": "^3.0.6",
     "solidarity": "^2.3.1",
     "solidarity-react-native": "^2.1.2"
+  },
+  "detox": {
+    "test-runner": "jest",
+    "configurations": {
+      "ios.sim": {
+        "binaryPath": "bin/Exponent.app",
+        "type": "ios.simulator",
+        "name": "iPhone 6s Plus"
+      }
+    }
   }
 }
