--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "main": "main.js",
   "scripts": {
     "checks": "node ./scripts/CheckSecretsExist.js",
-    "start": "yarn checks && expo start -c",
-    "postcheckout": "yarn solidarity"
+    "start": "yarn checks && expo start -c"
   },
   "dependencies": {
     "axios": "^0.18.0",
