Add solidarity to start check

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "main": "main.js",
   "scripts": {
-    "checks": "node ./scripts/CheckSecretsExist.js",
+    "checks": "node ./scripts/CheckSecretsExist.js && solidarity",
     "start": "yarn checks && expo start -c"
   },
   "dependencies": {
