--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-expo": "^5.0.0",
     "expo": "^32.0.6",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
+    "lodash": "^4.17.11",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-paper": "^2.12.0",
