--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "main": "main.js",
   "scripts": {
     "checks": "node ./scripts/CheckSecretsExist.js && solidarity",
-    "start": "yarn checks && expo start -c"
+    "start": "yarn checks && expo start -c",
+    "test": "node_modules/.bin/jest test/**/*.spec.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
