--- a/e2e/config.json
+++ b/e2e/config.json
@@ -1,4 +1,10 @@
 {
-    "setupTestFrameworkScriptFile": "./init.js",
-    "testEnvironment": "node"
+  "setupFilesAfterEnv": [
+    "./init.js"
+  ],
+  "testEnvironment": "node",
+  "reporters": [
+    "detox/runners/jest/streamlineReporter"
+  ],
+  "verbose": true
 }
