--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "~1.1.0",
     "react-navigation": "^3.11.1",
     "react-navigation-header-buttons": "^3.0.2",
+    "react-navigation-stack": "^1.5.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.4",
     "redux-promise-middleware": "^6.1.1",
