--- a/package.json
+++ b/package.json
@@ -7,47 +7,51 @@
     "test": "node_modules/.bin/jest test/**/*.spec.js"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "babel-preset-expo": "^8.1.0",
+    "@react-native-community/masked-view": "0.1.6",
+    "axios": "^0.19.2",
+    "babel-preset-expo": "^8.2.1",
     "expo": "^37.0.0",
+    "expo-auth-session": "~1.2.1",
     "expo-web-browser": "~8.2.1",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "lodash": "^4.17.15",
     "react": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-paper": "^2.16.0",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
-    "react-navigation": "^4.0.10",
-    "react-navigation-header-buttons": "^3.0.2",
-    "react-navigation-stack": "^1.10.3",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-navigation": "^4.3.9",
+    "react-navigation-header-buttons": "^4.0.2",
+    "react-navigation-stack": "^2.5.1",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.4",
-    "redux-promise-middleware": "^6.1.1",
+    "redux": "^4.0.5",
+    "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "chalk": "^2.4.2",
-    "detox": "^14.8.5",
+    "babel-eslint": "^10.1.0",
+    "chalk": "^4.0.0",
+    "detox": "^16.7.0",
     "detox-expo-helpers": "^0.6.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-plugin-flowtype": "^3.13.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-flowtype": "^5.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-native": "^3.7.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-native": "^3.8.1",
     "expo-detox-hook": "^1.0.10",
-    "flow-bin": "^0.113.0",
+    "flow-bin": "^0.125.1",
     "flow-result-checker": "^1.1.0",
     "jest-expo": "^37.0.0",
     "jest-junit-reporter": "^1.1.0",
-    "react-native-testing-library": "^1.11.1",
-    "react-test-renderer": "^16.12.0",
+    "react-native-testing-library": "^1.14.0",
+    "react-test-renderer": "^16.13.1",
     "redux-devtools": "^3.5.0",
     "redux-logger": "^3.0.6",
-    "solidarity": "^2.3.1",
+    "solidarity": "^3.0.0",
     "solidarity-react-native": "^2.1.2"
   },
   "resolutions": {
