--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "node_modules/.bin/jest test/**/*.spec.js"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.4.3",
     "@react-navigation/stack": "^5.4.0",
@@ -24,11 +25,10 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-navigation": "^4.3.9",
     "react-navigation-header-buttons": "^4.0.2",
-    "react-navigation-stack": "^2.5.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0"
   },
