--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
     "test": "node_modules/.bin/jest test/**/*.spec.js"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "axios": "^0.19.2",
-    "babel-preset-expo": "^8.2.3",
-    "expo": "^38.0.0",
-    "expo-auth-session": "~1.4.0",
-    "expo-web-browser": "~8.3.1",
+    "babel-preset-expo": "^8.3.0",
+    "expo": "^39.0.0",
+    "expo-auth-session": "~2.0.0",
+    "expo-web-browser": "~8.5.0",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "lodash": "^4.17.19",
-    "react": "16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
+    "react": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.0.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-navigation-header-buttons": "^4.0.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
@@ -47,7 +47,7 @@
     "expo-detox-hook": "^1.0.10",
     "flow-bin": "^0.130.0",
     "flow-result-checker": "^1.1.0",
-    "jest-expo": "^38.0.0",
+    "jest-expo": "^39.0.0",
     "jest-junit-reporter": "^1.1.0",
     "react-native-testing-library": "^2.1.1",
     "react-test-renderer": "^16.13.1",
