--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-falcon-app-intro": "^1.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
