--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "axios": "^0.21.0",
-    "babel-preset-expo": "^8.3.0",
-    "expo": "^39.0.0",
-    "expo-auth-session": "~2.0.0",
-    "expo-web-browser": "~8.5.0",
+    "babel-preset-expo": "8.3.0",
+    "expo": "^40.0.0",
+    "expo-auth-session": "~3.0.0",
+    "expo-random": "~10.0.0",
+    "expo-web-browser": "~8.6.0",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "lodash": "^4.17.20",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
     "react-navigation-header-buttons": "^4.0.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
@@ -49,7 +50,7 @@
     "expo-detox-hook": "^1.0.10",
     "flow-bin": "^0.136.0",
     "flow-result-checker": "^1.1.0",
-    "jest-expo": "^39.0.0",
+    "jest-expo": "^40.0.0",
     "jest-junit-reporter": "^1.1.0",
     "react-native-testing-library": "^2.1.1",
     "react-test-renderer": "^16.13.1",
