--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
     "test": "node_modules/.bin/jest test/**/*.spec.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "axios": "^0.21.0",
     "babel-preset-expo": "8.3.0",
-    "expo": "^41.0.0",
-    "expo-auth-session": "~3.2.3",
-    "expo-random": "~11.1.2",
-    "expo-web-browser": "~9.1.0",
+    "expo": "^42.0.0",
+    "expo-auth-session": "~3.3.1",
+    "expo-random": "~11.2.0",
+    "expo-web-browser": "~9.2.0",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "lodash": "^4.17.20",
-    "lottie-react-native": "3.5.0",
+    "lottie-react-native": "4.0.2",
     "react": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.7.1",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-screens": "~3.4.0",
     "react-navigation-header-buttons": "^6.2.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
@@ -50,7 +50,7 @@
     "expo-detox-hook": "^1.0.10",
     "flow-bin": "^0.144.0",
     "flow-result-checker": "^1.1.0",
-    "jest-expo": "^41.0.0",
+    "jest-expo": "^42.0.0",
     "jest-junit-reporter": "^1.1.0",
     "react-native-testing-library": "^2.1.1",
     "react-test-renderer": "^17.0.1",
