--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "axios": "^0.21.4",
-    "babel-preset-expo": "8.3.0",
-    "expo": "^42.0.3",
-    "expo-auth-session": "~3.3.1",
-    "expo-random": "~11.2.0",
-    "expo-web-browser": "~9.2.0",
+    "babel-preset-expo": "8.5.1",
+    "expo": "^43.0.0",
+    "expo-auth-session": "~3.4.2",
+    "expo-random": "~12.0.0",
+    "expo-web-browser": "~10.0.3",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "lodash": "^4.17.21",
-    "lottie-react-native": "4.0.2",
-    "react": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "lottie-react-native": "4.0.3",
+    "react": "17.0.1",
+    "react-native": "0.64.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-navigation-header-buttons": "^6.2.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
@@ -50,7 +51,7 @@
     "expo-detox-hook": "^1.0.10",
     "flow-bin": "^0.159.0",
     "flow-result-checker": "^1.1.0",
-    "jest-expo": "^42.0.0",
+    "jest-expo": "^43.0.0",
     "jest-junit-reporter": "^1.1.0",
     "react-native-testing-library": "^2.1.1",
     "react-test-renderer": "^17.0.1",
