--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "4.0.3",
     "react": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "^0.64.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.10.1",
+    "react-native-paper-dates": "^0.7.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
