--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
     "test": "node_modules/.bin/jest test/**/*.spec.js"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.0",
-    "babel-preset-expo": "9.0.1",
-    "expo": "^44.0.6",
-    "expo-auth-session": "~3.5.0",
-    "expo-random": "~12.1.1",
-    "expo-web-browser": "~10.1.0",
+    "babel-preset-expo": "~9.1.0",
+    "expo": "^45.0.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-random": "~12.2.0",
+    "expo-web-browser": "~10.2.1",
     "inaturalistjs": "github:inaturalist/inaturalistjs",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.0.1",
-    "react": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.11.2",
     "react-native-paper-dates": "^0.8.7",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-navigation-header-buttons": "^9.0.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
@@ -51,7 +51,7 @@
     "expo-detox-hook": "^1.0.10",
     "flow-bin": "^0.168.0",
     "flow-result-checker": "^1.1.0",
-    "jest-expo": "^44.0.0",
+    "jest-expo": "^45.0.0",
     "jest-junit-reporter": "^1.1.0",
     "react-native-testing-library": "^2.1.1",
     "react-test-renderer": "^17.0.2",
